width: 100% for mobile devices, fixed overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ body {
     margin: auto;
     min-height: 100vh;
     width: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
     font-family: 'Karla', sans-serif;
     font-size: 16px;
     font-weight: 400;
@@ -162,7 +162,7 @@ a {
 @media (max-width: 700px) {
     .main-grid {
         grid-template-columns: 1fr;
-        width: 45ch;
+        width: 100%;
     }
     .join {
         grid-column: span 1;
